--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,10 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    --><p>  Welcome to Altcord! Please connect you Altcoinchain Wallet to access Altcord.
+            Users will be REQUIRED to pay for entrance to EACH CHANNEL. 
+             CURRENTLY UNDER CONSTRUCTION USE AT YOUR OWN RISK!!!!!
+  </p>
 </body>
 
 </html>
