--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,10 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <p style="text-align: center">  Welcome to Altcord! Please connect your Altcoinchain Wallet to access Altcord.
+            Users will be REQUIRED to pay for entrance to EACH CHANNEL. 
+                      CURRENTLY UNDER CONSTRUCTION USE AT YOUR OWN RISK!!!!!
+  </p>
   <div id="root"></div>
   <!--
       This HTML file is a template.
@@ -37,10 +41,7 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    --><p>  Welcome to Altcord! Please connect you Altcoinchain Wallet to access Altcord.
-            Users will be REQUIRED to pay for entrance to EACH CHANNEL. 
-             CURRENTLY UNDER CONSTRUCTION USE AT YOUR OWN RISK!!!!!
-  </p>
+    -->
 </body>
 
 </html>
